--- a/index.html
+++ b/index.html
@@ -3,36 +3,74 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Your Page Title</title>
+    <title>Occupancy Grid Mapping</title>
     <link rel="stylesheet" href="styles.css"> <!-- Link to your external CSS file, if any -->
 </head>
 <body>
     <header>
-        <h1>Welcome to My Website</h1>
-        <nav>
-            <ul>
-                <li><a href="#">Home</a></li>
-                <li><a href="#">About</a></li>
-                <li><a href="#">Services</a></li>
-                <li><a href="#">Contact</a></li>
-            </ul>
-        </nav>
+        <h1>This is an overview on Occupany Grid Mapping. 
+            Sarin Ann Mathew
+            UMD College Park
+            October 2nd 2023
+        </h1>
     </header>
 
     <main>
         <section>
-            <h2>About Us</h2>
+            <h2>Summary</h2>
             <p>This is a sample webpage.</p>
         </section>
 
         <section>
-            <h2>Services</h2>
+            <h2>Overview</h2>
             <ul>
                 <li>Service 1</li>
                 <li>Service 2</li>
                 <li>Service 3</li>
             </ul>
         </section>
+
+        <section>
+            <h2>Occupancy grid mapping in today's robotics</h2>
+            <p>This is a sample webpage.</p>
+        </section>
+
+        <section>
+            <h2>Technical Details</h2>
+            <p>This is a sample webpage.</p>
+        </section>
+
+        <section>
+            <h2>Algorithms</h2>
+            <p>This is a sample webpage.</p>
+        </section>
+
+        <section>
+            <h2>Literature Review</h2>
+            <p>This is a sample webpage.</p>
+        </section>
+
+        <section>
+            <h2>Notable Variants</h2>
+            <p>This is a sample webpage.</p>
+        </section>
+
+        <section>
+            <h2>Applications</h2>
+            <p>This is a sample webpage.</p>
+        </section>
+
+        <section>
+            <h2>Open Research</h2>
+            <p>This is a sample webpage.</p>
+        </section>
+
+        <section>
+            <h2>References</h2>
+            <p>This is a sample webpage.</p>
+        </section>
+
+        
     </main>
 
     <footer>
