--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
 <body>
     <header>
         <h1>This is an overview on Occupany Grid Mapping. 
-            Sarin Ann Mathew
-            UMD College Park
-            October 2nd 2023
+            <span style="font-size: 12px; color: gray;">Sarin Ann Mathew</span>,
+            <span style="font-size: 12px; color: gray;">UMD College Park</span>,
+            <span style="font-size: 12px; color: gray;">October 2nd, 2023</span>
         </h1>
     </header>
 
