--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
 </head>
 <body>
     <header>
-        <h1>This is an overview on Occupany Grid Mapping. 
-            <span style="font-size: 12px; color: gray;">Sarin Ann Mathew</span>,
-            <span style="font-size: 12px; color: gray;">UMD College Park</span>,
+        <h1>This is an overview on Occupany Grid Mapping. <br>
+            <span style="font-size: 12px; color: gray;">Sarin Ann Mathew</span> <br>
+            <span style="font-size: 12px; color: gray;">UMD College Park</span> <br>
             <span style="font-size: 12px; color: gray;">October 2nd, 2023</span>
         </h1>
     </header>
