--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
 <body>
     <header>
         <h1>This is an overview on Occupany Grid Mapping. <br>
-            <span style="font-size: 12px; color: gray;">Sarin Ann Mathew</span> <br>
-            <span style="font-size: 12px; color: gray;">UMD College Park</span> <br>
-            <span style="font-size: 12px; color: gray;">October 2nd, 2023</span>
+            <li><span style="font-size: 12px; color: gray;">Sarin Ann Mathew</span></li>
+            <li><span style="font-size: 12px; color: gray;">UMD College Park</span></li>
+            <li><span style="font-size: 12px; color: gray;">October 2nd, 2023</span></li>
         </h1>
     </header>
 
