--- a/index.html
+++ b/index.html
@@ -8,10 +8,10 @@
 </head>
 <body>
     <header>
-        <h1>This is an overview on Occupany Grid Mapping. <br>
-            <li><span style="font-size: 12px; color: gray;">Sarin Ann Mathew</span></li>
-            <li><span style="font-size: 12px; color: gray;">UMD College Park</span></li>
-            <li><span style="font-size: 12px; color: gray;">October 2nd, 2023</span></li>
+        <h1>This is an overview on Occupany Grid Mapping.
+            <span style="font-size: 12px; color: gray;">Sarin Ann Mathew</span>
+            <span style="font-size: 12px; color: gray;">UMD College Park</span>
+            <span style="font-size: 12px; color: gray;">October 2nd, 2023</span>
         </h1>
     </header>
 
@@ -23,53 +23,47 @@
 
         <section>
             <h2>Overview</h2>
-            <ul>
-                <li>Service 1</li>
-                <li>Service 2</li>
-                <li>Service 3</li>
-            </ul>
         </section>
 
         <section>
             <h2>Occupancy grid mapping in today's robotics</h2>
-            <p>This is a sample webpage.</p>
+            <p>Sample Text.</p>
         </section>
 
         <section>
             <h2>Technical Details</h2>
-            <p>This is a sample webpage.</p>
+            <p>Sample Text.</p>
         </section>
 
         <section>
             <h2>Algorithms</h2>
-            <p>This is a sample webpage.</p>
+            <p>Sample Text.</p>
         </section>
 
         <section>
             <h2>Literature Review</h2>
-            <p>This is a sample webpage.</p>
+            <p>Sample Text.</p>
         </section>
 
         <section>
             <h2>Notable Variants</h2>
-            <p>This is a sample webpage.</p>
+            <p>Sample Text.</p>
         </section>
 
         <section>
             <h2>Applications</h2>
-            <p>This is a sample webpage.</p>
+            <p>Sample Text.</p>
         </section>
 
         <section>
             <h2>Open Research</h2>
-            <p>This is a sample webpage.</p>
+            <p>Sample Text.</p>
         </section>
 
         <section>
             <h2>References</h2>
-            <p>This is a sample webpage.</p>
+            <p>Sample Text.</p>
         </section>
-
         
     </main>
 
