--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="styles.css"> <!-- Link to your external CSS file, if any -->
 </head>
 <body>
+    <div style="background-color: rgba(0, 0, 255, 0.5);"></div>
     <header>
         <h1>Occupany Grid Mapping
             <span style="font-size: 12px; color: gray;">Sarin Ann Mathew</span>
@@ -23,7 +24,7 @@
                 This involves assuming that the pose of the robot is known. It was first introduced 
                 by H. Moravec and A. Elfes in 1985. As explained by Alberto Elfes in his paper, "The Occupancy Grid
                 is a multi-dimensional randomfield model that maintains probabilistic estimates of the occupancy state of each cell in
-                a spatia/lattice". 
+                a spatia/lattice". Occupancy grid maps are a type of map representation used primarily for mapping and representing the static environment of a robot or an autonomous system. These maps provide information about whether individual cells in a grid are occupied or unoccupied. 
 
             </p>
         </section>
@@ -50,7 +51,7 @@
 
         <section>
             <h2>Technical Details</h2>
-            <p>Sample Text.</p>
+            <p></p>
         </section>
 
         <section>
