--- a/index.html
+++ b/index.html
@@ -23,15 +23,19 @@
                 This involves assuming that the pose of the robot is known. It was first introduced 
                 by H. Moravec and A. Elfes in 1985. As explained by Alberto Elfes in his paper, "The Occupancy Grid
                 is a multi-dimensional randomfield model that maintains probabilistic estimates of the occupancy state of each cell in
-                a spatia/lattice". Occupancy grid maps are a type of map representation used primarily for mapping and representing the static environment of a robot or an autonomous system. These maps provide information about whether individual cells in a grid are occupied or unoccupied. 
+                a spatia/lattice". Occupancy grid maps are a type of map representation used primarily for mapping and representing the 
+                static environment of a robot or an autonomous system. These maps provide information about whether individual cells in a 
+                grid are occupied or unoccupied. 
 
             </p>
         </section>
 
         <section>
             <h2>Occupancy grid mapping in today's robotics</h2>
-            <p>Occupancy Grid Maps play a crucial role in enabling robots to understand
-                and navigate within their surroundings.</p>
+            <p>Occupancy Grid Maps play a crucial role in enabling robots to understand and navigate within their surroundings. Most of the robotic 
+                applications do not come with the luxury of having pre-existing maps that determine the shape of the environment. Building autonomous 
+                robots involve the challenge for learning to map from scratch and adapt to the changes with minimal human intervention. 
+                Occupancy grid maps will be advantageous for robotics applications in the following ways:</p>
             <ul>
                 <li> Robots use occupancy grid maps to represent the environment in a 
                     grid-based format. The environment is discretized into small cells, 
