--- a/index.html
+++ b/index.html
@@ -53,6 +53,9 @@
 
         <section>
             <h2>Technical Details</h2>
+            <p>As in any problem of mapping, creating occupancy grid maps also need a state and a measurement model. The state is
+                the map of the world which we are trying to find. The measurement model is p(z<sub>t</sub>|m; l<sub>t</sub>>), or the probability of making an
+                observation z<sub>t</sub> given a map m and a location on the map l<sub>t</sub>>.</p>
             <p></p>
         </section>
 
